--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,10 @@
       "project": "./tsconfig.json"
     },
     "rules": {
-      "import/prefer-default-export": "off"
+      "import/prefer-default-export": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/jsx-uses-react": "off",
+      "@typescript-eslint/comma-dangle": "off",
+      "jsx-a11y/media-has-caption": "off"
     }
-}
+} 
