--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,20 +20,19 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-2
-          output: json
           
       - name: Build static website files
         run: yarn && yarn build
           
-      - name: Copy files to S3 with the AWS CLI
+      - name: Update files in S3
         run: |
            aws s3 sync ./build s3://emmy-codes-client --delete
            
-      - name: Invalidate CloudFront
+      - name: Invalidate CloudFront cache
         uses: chetan/invalidate-cloudfront-action@v2
         env:
           DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
-          PATHS: "/index.html"
+          PATHS: "/*"
           AWS_REGION: "ap-southeast-2"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
