--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "@types/react-transition-group": "^4.4.5",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
